--- a/src/App.css
+++ b/src/App.css
@@ -450,7 +450,26 @@ justify-content: space-between;
   margin:1em;
   height:55vh;
 }
-
+.barrel{
+  /* border:.2px solid navy; */
+  /* margin:1em; */
+  display:flex;
+  justify-content: space-between;
+}
+.bulletLogo{
+  height:40px;
+}
+.bulletFeat{
+  font-size:14px;
+  color:navy;
+}
+.cardCoverer{
+  width:100%;
+  /* margin:2em; */
+  opacity:.3;
+  height:70%;
+  /* border-radius:50%; */
+}
 /* ------------------------------------------- */
 /* ------------------------------------------- */
 /* --------------{{GENERAL}}------------------ */
