--- a/src/App.css
+++ b/src/App.css
@@ -470,13 +470,17 @@ justify-content: space-between;
   width:100%;
 }
 .movieScreen{
-  /* border:solid navy; */
-  /* height:84vh; */
+  /* border: .2px solid rgb(141, 141, 169); */
+  height:auto;
+  margin:1em;
   
 }
 .screen{
-  /* border:solid black; */
+  border: .2px solid black;
   margin:3em;
+  background-color:rgba(86, 86, 113, 0.774);
+  color:white;
+  padding:1em;
   /* height:55vh; */
 }
 .barrel{
@@ -504,6 +508,9 @@ justify-content: space-between;
   text-align:center;
 }
 .investPic{
+  width:100%;
+}
+.lionShare{
   width:100%;
 }
 /* ------------------------------------------- */
